# cg4002-ai

./: .gitignore  model.cpp  model.h  model.ipynb  pyproject.toml  test_model.cpp
hls_export/: component.xml
hls_export/doc/: ReleaseNotes.txt
hls_export/hdl/verilog/: predict_flow_control_loop_pipe_sequential_init.v  predict_hidden_layer1_RAM_AUTO_1R1W.v  predict_l1_bias_ROM_AUTO_1R.v  (+13 more)
indiv/: indiv.xpr
indiv_test/: driver.py  indiv_test.hwh  model.cpp
indiv_test/data/: run_or_walk_test_data.json
indiv_test/models/: mlp_09_02_2024-18_23_46.pt  mlp_09_02_2024-18_23_46_params.txt
integration/: class_dict.json  design_1.hwh  driver.py  finalplease.hwh  handonly.hwh  handonly.ipynb  integration.hwh  model.cpp  model.h  model.ipynb  newlogout.hwh  swingarmlogout.hwh  test_model.cpp
integration/models/: mlp_03_04_2024-17_23_08.pt  mlp_03_04_2024-17_23_08_params.txt  mlp_03_04_2024-17_27_53.pt  mlp_03_04_2024-17_27_53_params.txt  mlp_08_03_2024-02_31_14.pt  mlp_08_03_2024-02_31_14_params.txt  mlp_08_03_2024-21_42_54.pt  mlp_08_03_2024-21_42_54_params.txt  mlp_08_03_2024-21_58_42.pt  mlp_08_03_2024-21_58_42_params.txt  mlp_08_03_2024-22_14_38.pt  mlp_08_03_2024-22_14_38_params.txt  mlp_27_03_2024-17_25_08.pt  mlp_27_03_2024-17_25_08_params.txt  mlp_handonly_09_04_2024-19_47_01.pt  mlp_handonly_09_04_2024-19_47_01_params.txt  mlp_handonly_09_04_2024-20_18_12.pt  mlp_handonly_09_04_2024-20_18_12_params.txt  mlp_handonly_11_04_2024-20_08_10.pt  mlp_handonly_11_04_2024-20_08_10_params.txt  mlp_handonly_11_04_2024-20_12_51.pt  mlp_handonly_11_04_2024-20_12_51_params.txt
(+4438 files in other folders)
